# ceph

./: .gitignore  ceph.spec.in  make-dist
qa/suites/deepsea/build_validation/rack_dc_region_unavailability/: 2-test-phase.yaml  sle_15.0.yaml
qa/suites/deepsea/salt/2nodes/: 1-workunit.yaml
qa/suites/deepsea/salt/complicated/: 1-workunit.yaml
qa/suites/deepsea/test/tasks/: 2deepsea_deploy.yaml
qa/suites/deepsea/tier0/health-ok/tasks/: default-profile.yaml
qa/suites/deepsea/tier2-hardware/: filestore-to-bluestore-migration  fs  igw  nfs-ganesha  node-add  node-rm  purge-test  rgw
qa/suites/deepsea/tier3/upgrade/: 3-update-salt.yaml  4-test-phase.yaml  alternative-defaults.yaml
qa/suites/deepsea/tier4/upgrade/: 3-test-phase.yaml
qa/suites/suse/tier1/migration/exec/: bluestore.yaml  bluestore2.yaml  bluestore3.yaml  filestore.yaml  filestore2.yaml
qa/tasks/: deepsea.py  deepsea_deploy.py  salt_manager.py  ses_qa.py  vstart_runner.py
qa/workunits/deepsea/: salt-mytest.sh
src/: CMakeLists.txt
src/ceph-detect-init/ceph_detect_init/: __init__.py
src/ceph-disk/: tox.ini
src/ceph-disk/ceph_disk/: main.py
src/crypto/: CMakeLists.txt
src/rgw/: rgw_admin.cc  rgw_file.cc  rgw_file.h
src/test/: Makefile.am
src/test/osd/: CMakeLists.txt
